--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>HelloFX</mainClass>
+                    <mainClass>website.view.View</mainClass>
                 </configuration>
             </plugin>
         </plugins>
